gitops/tenants/tenant-common/sync-wave-2/overlays/dev/controlplane-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: controlplane-ingress
spec:
  rules:
  - host: dev.tenark.com
  tls:
  - hosts:
    - dev.tenark.com
    secretName: keyvault-controlplane-ingress-dev
