gitops/tenants/tenant-common/sync-wave-2/overlays/dev/portal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal-ingress
spec:
  rules:
  - host: dev.tenark.com
  tls:
  - hosts:
    - dev.tenark.com
    secretName: keyvault-portal-ingress-dev
